--- a/calculator.html
+++ b/calculator.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="stylesheet" href="style.css">
     <script src="calculator.js"></script>
 </head>
 <body>
-    
+    <div class="calculator">
+        <div class="row display">
+            <output class="result">DISPLAY</output>
+        </div>
+        <div class="row row1">
+            <button class="clear">AC</button>
+            <button class="empty"></button>
+            <button class="empty"></button>
+            <button>÷</button>
+        </div>
+        <div class="row row2">
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button class="operator">x</button>
+        </div>
+        <div class="row row3">
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button class="operator">-</button>
+        </div>
+        <div class="row row4">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button class="operator">+</button>
+        </div>
+        <div class="row row3">
+            <button class="empty"></button>
+            <button>0</button>
+            <button class="empty"></button>
+            <button class="equals">=</button>
+        </div>
+        
+    </div>
 </body>
 </html>
