--- a/calculator.html
+++ b/calculator.html
@@ -5,44 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
-    <script src="calculator.js"></script>
+    <script src="calculator.js" defer></script>
 </head>
 <body>
     <div class="calculator">
         <div class="row display">
-            <output class="result">DISPLAY</output>
+            <output class="result"></output>
         </div>
-        <div class="row row1">
+        <div class="row">
             <button class="clear">AC</button>
             <button class="empty"></button>
             <button class="empty"></button>
-            <button>÷</button>
+            <button class="operator">/</button>
         </div>
-        <div class="row row2">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button class="operator">x</button>
+        <div class="row">
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button class="operator">*</button>
         </div>
-        <div class="row row3">
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
+        <div class="row">
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
             <button class="operator">-</button>
         </div>
-        <div class="row row4">
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
+        <div class="row">
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
             <button class="operator">+</button>
         </div>
-        <div class="row row3">
+        <div class="row">
             <button class="empty"></button>
-            <button>0</button>
+            <button class="number">0</button>
             <button class="empty"></button>
             <button class="equals">=</button>
         </div>
-        
+        <!-- ÷×− -->
     </div>
 </body>
 </html>
