Add functionality for entering decimal numbers

--- a/calculator.html
+++ b/calculator.html
@@ -39,7 +39,7 @@
         <div class="row">
             <button class="empty"></button>
             <button class="number">0</button>
-            <button class="empty"></button>
+            <button class="decimal">.</button>
             <button class="equals">=</button>
         </div>
         <!-- ÷×− -->
